Refactor: Implement favorite and notification features
This commit introduces a significant refactoring to implement favorite functionality and local notifications for recipes.

Key changes include:
- Added Room database entities and DAOs for managing favorite recipes and their notification schedules.
- Implemented `FavoriteRecipeRepository` to handle favorite operations and interact with the database.
- Integrated WorkManager to schedule and trigger recipe notifications.
- Updated `RecipeApplication` to initialize WorkManager and schedule initial notifications.
- Modified `AppNavigation` to handle deep links for notifications, allowing users to navigate directly to a recipe from a notification.
- Refactored `SearchScreen` and `SearchViewmodel` to support recipe details display in a bottom sheet and toggling favorite status.
- Introduced `RecipeApiService` to centralize API calls for recipes.
- Updated various UI components and view models to reflect the new data models and functionalities.
- Removed unused files and code related to the previous favorite implementation.
- Added necessary permissions for notifications and vibration to `AndroidManifest.xml`.
- Updated Gradle dependencies for WorkManager and Koin WorkManager integration.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ koin = "4.0.0"
 coil3 = "3.0.4"
 datastore = "1.1.4"
 napier = "2.6.1"
+workRuntimeKtx = "2.10.3"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -69,6 +70,7 @@ datastore = { module = "androidx.datastore:datastore", version.ref = "datastore"
 datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastore" }
 
 napier = { module = "io.github.aakira:napier", version.ref = "napier" }
+androidx-work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workRuntimeKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
