Feat: Implement favorite and notification features
This commit introduces a significant refactoring to implement favorite functionality and local notifications for recipes.

Key changes include:
- Added Room database entities and DAOs for managing favorite recipes and their notification schedules.
- Implemented `FavoriteRecipeRepository` to handle favorite operations and interact with the database.
- Integrated WorkManager to schedule and trigger recipe notifications.
- Updated `RecipeApplication` to initialize WorkManager and schedule initial notifications.
- Modified `AppNavigation` to handle deep links for notifications, allowing users to navigate directly to a recipe from a notification.
- Refactored `SearchScreen` and `SearchViewmodel` to support recipe details display in a bottom sheet and toggling favorite status.
- Introduced `RecipeApiService` to centralize API calls for recipes.
- Updated various UI components and view models to reflect the new data models and functionalities.
- Removed unused files and code related to the previous favorite implementation.
- Added necessary permissions for notifications and vibration to `AndroidManifest.xml`.
- Updated Gradle dependencies for WorkManager and Koin WorkManager integration.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@
 .externalNativeBuild
 .cxx
 local.properties
+/.kotlin/errors/errors-1757326161099.log
+/.kotlin/errors/*
+/.kotlin/errors/errors-1757326185938.log
